# keplemon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pypi.yml  test.yml  testing.yml
docs/: getting_started.md  index.md  license.md
docs/examples/: ca_examples.md  index.md  od_example.md  propagation_examples.md
docs/modules/: enums.md  index.md  time.md
docs/stylesheets/: extra.css
docs/submodules/: bodies.md  elements.md  enums.md  estimation.md  events.md  index.md  time.md
lib/linux/amd/: ld-linux-x86-64.so.2  libgcc_s.so.1  libgfortran.so.5  libgomp.so.1  libm.so.6  libquadmath.so.0  libz.so.1
lib/linux/arm/: libgcc_s.so.1  libgfortran.so.5  libgomp.so.1  libm.so.6
lib/mac/amd/: libastrofunc.dylib  libdllmain.dylib  libelops.dylib  libenvconst.dylib  libextephem.dylib  libgcc_s.1.1.dylib  libgfortran.5.dylib  libgomp.1.dylib  libobs.dylib  libquadmath.0.dylib  libsatstate.dylib  libsensor.dylib  libsgp4prop.dylib  libspvec.dylib  libtimefunc.dylib  libtle.dylib  libvcm.dylib
lib/mac/arm/: libastrofunc.dylib  libdllmain.dylib  libelops.dylib  libenvconst.dylib  libextephem.dylib  libgcc_s.1.1.dylib  libgfortran.5.dylib  libgomp.1.dylib  libobs.dylib  libquadmath.0.dylib  libsatstate.dylib  libsensor.dylib  libsgp4prop.dylib  (+4 more)
lib/windows/: AstroFunc.lib  DllMain.lib  ElOps.lib  EnvConst.lib  ExtEphem.lib  Obs.lib  SatState.lib  Sensor.lib  Sgp4Prop.lib  SpVec.lib  TimeFunc.lib  Tle.lib  Vcm.lib
python/keplemon/: __init__.py  enums.pyi  libastrofunc.dylib  libelops.dylib  libgcc_s.1.1.dylib  libsatstate.dylib  libsensor.dylib  libtle.dylib  libvcm.dylib  time.pyi
scripts/: extract_wheel_from_image.sh  set_loader_path.sh
src/: bodies.rs  catalogs.rs  configs.rs  elements.rs  enums.rs  estimation.rs  events.rs  lib.rs  propagation.rs  saal.rs  time.rs
src/bodies/: constellation.rs  earth.rs  observatory.rs  satellite.rs  sensor.rs
src/catalogs/: tle_catalog.rs
src/elements/: cartesian_state.rs  cartesian_vector.rs  ephemeris.rs  equinoctial_elements.rs  geodetic_position.rs  keplerian_elements.rs  keplerian_state.rs  spherical_vector.rs  tle.rs  topocentric_elements.rs
src/enums/: classification.rs  covariance_type.rs  equinox_type.rs  geodetic_model.rs  keplerian_type.rs  reference_frame.rs  saal_key_mode.rs  time_system.rs
src/estimation/: batch_least_squares.rs  covariance.rs  observation.rs  observation_residual.rs
src/events/: close_approach.rs  close_approach_report.rs
src/propagation/: force_properties.rs  inertial_propagator.rs  sgp4_output.rs
src/saal/: astro_func_interface.rs  env_const_interface.rs  ext_ephem_interface.rs  get_set_string.rs  main_interface.rs  sat_state_interface.rs  sgp4_prop_interface.rs  time_func_interface.rs  tle_interface.rs
src/time/: epoch.rs  time_components.rs  time_span.rs
stubs/keplemon/: __init__.pyi  bodies.pyi  time.pyi
tests/: 2025-04-15-celestrak.3le  2025-04-15-celestrak.tle  2025-04-15-space-track.tle  test_bodies.py  test_catalogs.py  test_elements.py  test_enums.py  test_time.py
