[package]
name = "keplemon"
version = "0.1.6"
edition = "2021"

[dependencies]
ctor = "0.4.1"
nalgebra = "0.33.2"
openssl = { version = "0.10.72", default-features = false, features = ["vendored"] }
openssl-sys = "0.9.108"
pyo3 = { version = "0.24.1", features = ["extension-module"] }
rayon = "1.10.0"
reqwest = "0.12.15"

[lib]
crate-type = ["cdylib"]
name = "keplemon"

[dev-dependencies]
approx = "0.5.1"
