[package]
name = "keplemon"
version = "0.1.8"
edition = "2021"

[dependencies]
ctor = "0.4.1"
nalgebra = "0.33.2"
pyo3 = { version = "0.24.1", features = ["extension-module"] }
rayon = "1.10.0"
reqwest = "0.12.15"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10.72", default-features = false, features = [
    "vendored",
] }
openssl-sys = { version = "0.9.108", default-features = false, features = [
    "vendored",
] }

[lib]
crate-type = ["cdylib"]
name = "keplemon"

[dev-dependencies]
approx = "0.5.1"
