[project]
name = "keplemon"
version = "0.1.7"
dependencies = ["requests", "click"]
description = "Citra Space Corporation's Rust-accelerated astrodynamics library."
authors = [{ name = "Brandon Sexton", email = "brandon@citra.space" }]
license = "MIT"
requires-python = ">=3.9"

[project.urls]
Documentation = "https://keplemon.citra.space"
Repository = "https://github.com/citra-space/keplemon.git"
Issues = "https://github.com/citra-space/keplemon/issues"


[project.optional-dependencies]
dev = [
    "keplemon[test]",
    "mkdocstrings[python]",
    "mkdocs-material",
    "markdown-include",
    "tomli; python_version < '3.11'",
]
test = ["pytest"]

[project.scripts]
keplemon = "keplemon.__main__:cli"

[tool.maturin]
python-source = "python"
module-name = "keplemon._keplemon"
include = ["keplemon/*"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
